--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "test": "mocha test/**/*.test.js -r dotenv/config"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "http-errors": "~1.6.3",
+    "jsonwebtoken": "^9.0.1",
     "moment": "^2.29.4",
     "mongoose": "^7.4.3",
     "morgan": "~1.9.1",
