--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-DB_STRING =mongodb+srv://tsanta:ETU001146@cluster0.6oftdrm.mongodb.net/karohy?retryWrites=true&w=majority 
+DB_STRING = 
 PORT = // port
 BASE_URL = // Host url
 VERSION = // Aza kitihana fa mbola tsy ilaina amzao
