--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,6 @@
 DB_STRING = 
-PORT = // port
-BASE_URL = // Host url
 VERSION = // Aza kitihana fa mbola tsy ilaina amzao
+ENVIRONMENT = // local OR development OR staging OR production
+PORT = // port
+HOST = // host url - LEAVE BLANK IF YOU ARE WORKING IN LOCAL (ex : karohy-dev.vercel.app)
+SCHEME = http OR https 
