Fix : Fix default host

--- a/.env.example
+++ b/.env.example
@@ -2,5 +2,5 @@ DB_STRING =
 VERSION = // Aza kitihana fa mbola tsy ilaina amzao
 ENVIRONMENT = // local OR development OR staging OR production
 PORT = // port
-HOST = // host url - LEAVE BLANK IF YOU ARE WORKING IN LOCAL (ex : karohy-dev.vercel.app)
+HOST = // host url - LEAVE BLANK IF YOU DON'T WANT TO USE SPECIFIC HOST (ex : karohy-dev.vercel.app)
 SCHEME = http OR https 
