--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "node ./bin/www",
     "dev": "nodemon ./bin/www",
-    "test": "mocha test/**/*.test.js -r dotenv/config"
+    "test": "mocha test/**/*.test.js -r dotenv/config --timeout 10000"
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
