--- a/package.json
+++ b/package.json
@@ -1,12 +1,18 @@
 {
-  "name": "karohy-backend",
-  "version": "0.0.0",
-  "private": true,
+  "name": "init-typescript-nodejs",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "start": "node ./bin/www",
-    "dev": "nodemon ./bin/www",
-    "test": "mocha test/**/*.test.js -r dotenv/config --timeout 10000"
+    "build": "rimraf ./build && tsc",
+    "start": "npm run build && node build/index.js",
+    "test": "mocha --require ts-node/register src/test/**/*.test.ts --timeout 10000",
+    "dev": "npx nodemon",
+    "lint": "eslint . --ext .ts"
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
     "cookie-parser": "~1.4.6",
@@ -26,8 +32,32 @@
     "yamljs": "^0.3.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^10.0.28-alpha",
+    "@types/chai": "^4.3.6",
+    "@types/cookie-parser": "~1.4.4",
+    "@types/cors": "^2.8.14",
+    "@types/debug": "~4.1.8",
+    "@types/ejs": "^3.1.2",
+    "@types/express": "^4.17.17",
+    "@types/http-errors": "~2.0.1",
+    "@types/jsonwebtoken": "^9.0.2",
+    "@types/mocha": "^10.0.1",
+    "@types/morgan": "~1.9.5",
+    "@types/node": "^20.5.9",
+    "@types/nodemon": "^1.19.2",
+    "@types/supertest": "^2.0.12",
+    "@types/swagger-jsdoc": "^6.0.1",
+    "@types/swagger-ui-express": "^4.1.3",
+    "@types/yamljs": "^0.2.31",
+    "@typescript-eslint/eslint-plugin": "^6.6.0",
+    "@typescript-eslint/parser": "^6.6.0",
     "chai": "^4.3.8",
+    "eslint": "^8.48.0",
     "mocha": "^10.2.0",
-    "supertest": "^6.3.3"
+    "nodemon": "^3.0.1",
+    "rimraf": "^5.0.1",
+    "supertest": "^6.3.3",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.2.2"
   }
 }
