--- a/vercel.json
+++ b/vercel.json
@@ -2,11 +2,9 @@
   "version": 2,
   "builds": [
     {
-      "src": "index.js",
+      "src": "src/index.ts",
       "use": "@vercel/node"
     }
   ],
-  "routes": [
-    { "src": "/.*", "dest": "index.js" }
-  ]
+  "routes": [{ "src": "/.*", "dest": "src/index.ts" }]
 }
