Chore : Merging from js to typescript, and adding lint test and TDD to build script

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,6 @@
 DB_STRING = 
+JWT_SECRET = 
+DB_NAME = // Name of the DB , for staging : staging_db
 VERSION = // Aza kitihana fa mbola tsy ilaina amzao
 ENVIRONMENT = // local OR development OR staging OR production
 PORT = // port
