--- a/vercel.json
+++ b/vercel.json
@@ -6,5 +6,10 @@
       "use": "@vercel/node"
     }
   ],
-  "routes": [{ "src": "/.*", "dest": "src/index.ts" }]
+  "routes": [{ "src": "/.*", "dest": "src/index.ts" }],
+  "git": {
+    "deploymentEnabled": {
+      "main": false
+    }
+  }
 }
