--- a/vercel.json
+++ b/vercel.json
@@ -9,7 +9,8 @@
   "routes": [{ "src": "/.*", "dest": "src/index.ts" }],
   "git": {
     "deploymentEnabled": {
-      "main": false
+      "main": false,
+      "staging": false
     }
   }
 }
