--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,7 @@ on:
       - main
 
 jobs:
-  build:
+  Build:
     runs-on: ubuntu-latest
 
     steps:
@@ -27,6 +27,9 @@ jobs:
     - name: Run tests and lint
       run: npm run build
 
+  Deploy:
+    runs-on: ubuntu-latest
+    steps:
     - name: Install Vercel CLI
       run: npm install --global vercel@latest
 
@@ -35,6 +38,6 @@ jobs:
 
     - name: Build Project Artifacts
       run: vercel build --prod --token=${{ secrets.VERCEL_TOKEN }}
-      
+
     - name: Deploy Project Artifacts to Vercel
       run: vercel deploy --prebuilt --prod --token=${{ secrets.VERCEL_TOKEN }}
