--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -9,7 +9,7 @@ on:
       - staging
 
 jobs:
-  Build:
+  Build_Staging:
     runs-on: ubuntu-latest
 
     steps:
@@ -27,8 +27,11 @@ jobs:
     - name: Run tests and lint
       run: npm run build
 
-  Deploy:
+  Deploy_Prod:
     runs-on: ubuntu-latest
+    needs: Build
+    if: success()
+
     steps:
     - name: Install Vercel CLI
       run: npm install --global vercel@latest
