--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -27,9 +27,9 @@ jobs:
     - name: Run tests and lint
       run: npm run build
 
-  Deploy_Prod:
+  Deploy_Staging:
     runs-on: ubuntu-latest
-    needs: Build
+    needs: Build_Staging
     if: success()
 
     steps:
