--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "npm run test && npm run lint && rimraf ./build && tsc",
     "lint": "eslint . --ext .ts",
-    "start": "npm run build && node build/index.js",
+    "start": "node build/index.js",
     "test": "mocha --require ts-node/register src/test/**/*.test.ts --timeout 10000",
     "dev": "npx nodemon"
   },
