--- a/vercel.json
+++ b/vercel.json
@@ -2,19 +2,17 @@
   "version": 2,
   "builds": [
     {
-      "src": "package.json",
-      "use": "@vercel/static-build"
+      "src": "build/index.js",
+      "use": "@vercel/node",
+      "config": { "includeFiles": ["build/**"] }
     }
   ],
-  "routes": [{ "src": "/.*", "dest": "build/server.js" }],
-  "env": {
-    "BUILD_SCRIPT": "npm run build"
-  },
-  "functions": {
-    "api/**/*.ts": {
-      "runtime": "@vercel/node"
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "build/index.js"
     }
-  },
+  ],
   "git": {
     "deploymentEnabled": {
       "main": false,
