--- a/vercel.json
+++ b/vercel.json
@@ -2,17 +2,24 @@
   "version": 2,
   "builds": [
     {
-      "src": "build/index.js",
-      "use": "@vercel/node",
-      "config": { "includeFiles": ["build/**"] }
+      "src": "package.json",
+      "use": "@vercel/static-build"
     }
   ],
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "build/index.js"
+      "dest": "package.json"
     }
   ],
+  "env": {
+    "BUILD_SCRIPT": "npm run build"
+  },
+  "functions": {
+    "api/**/*.ts": {
+      "runtime": "@vercel/node"
+    }
+  },
   "git": {
     "deploymentEnabled": {
       "main": false,
