--- a/vercel.json
+++ b/vercel.json
@@ -2,20 +2,17 @@
   "version": 2,
   "builds": [
     {
-      "src": "package.json",
-      "use": "@vercel/static-build"
+      "src": "dist/index.js",
+      "use": "@vercel/node",
+      "config": { "includeFiles": ["build/**"] }
     }
   ],
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "package.json"
+      "dest": "build/index.js"
     }
   ],
-  "env": {
-    "BUILD_SCRIPT": "npm run build",
-    "NODE_ENV": "production"
-  },
   "git": {
     "deploymentEnabled": {
       "main": true,
