Chore : fix tsconfig

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,16 +5,12 @@
     "lib": ["es6"],
     "allowJs": true,
     "rootDir": "src",
-    "outDir": "build",
+    "outDir": "./build",
     "strict": true,
     "noImplicitAny": false,
     "esModuleInterop": true,
     "resolveJsonModule": true,
-    "baseUrl": ".",
-    "paths": {
-      "*": ["node_modules/*", "src/types/*"]
-    }
+    "baseUrl": "."
   },
-  "include": ["./src/**/*"]
+  "include": ["src/**/*", "src/views/**/*"]
 }
- 
