Debug : fix echo

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,9 +35,10 @@ jobs:
 
     steps:
       - name: Debug Environment Variables
-        run: echo "VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}"
-        run: echo "VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}"
-        run: echo "VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}""
+        run: |
+          echo "VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}"
+          echo "VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}"
+          echo "VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}"
 
       # - name: Install Vercel CLI
       #   run: npm install --global vercel@latest
