--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -43,4 +43,4 @@ jobs:
       run: vercel build --token=${{ secrets.VERCEL_TOKEN }}
 
     - name: Deploy Project Artifacts to Vercel
-      run: vercel deploy --prebuilt --token=${{ secrets.VERCEL_TOKEN }}
+      run: vercel deploy --token=${{ secrets.VERCEL_TOKEN }}
