--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -1,4 +1,4 @@
-name: Vercel Production Deployment
+name: Karohy backend - CI prod Deployment
 env:
   VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
   VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
@@ -7,8 +7,24 @@ on:
     branches:
       - main
 jobs:
-  Deploy-Production:
+  Build_Prod:
     runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+      - name: Setup Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: 16
+      - name: Install dependencies
+        run: npm ci
+      - name: Run tests and lint
+        run: npm run build
+  Deploy_Prod:
+    runs-on: ubuntu-latest
+    needs: Build_Prod
+    if: success()
+
     steps:
       - uses: actions/checkout@v2
       - name: Install Vercel CLI
